Changed DB from mongoDB to MySQL

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 PORT=4001
-MONGO_URL=mongodb+srv://pranav:<password>@nodeexpressprojects.u2ejntp.mongodb.net/userCRUD
 SECRET_KEY=sdfsd123@%$^@
+
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASSWORD=1234
+MYSQL_DB=codesfortomorrow
